--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://boards.4chan.org/b/thread/*"],
+      "matches": [
+        "https://boards.4chan.org/b/thread/*",
+        "https://archive.wakarimasen.moe/b/thread/*",
+        "https://archived.moe/b/thread/*",
+        "https://thebarchive.com/b/thread/*"
+      ],
       "run_at": "document_end",
       "js": ["archive.js"]
     }
