Add native host

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
   "background": {
     "service_worker": "background.js"
   },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "content_scripts": [
     {
       "matches": [
@@ -19,6 +23,7 @@
     }
   ],
   "permissions": [
-    "downloads"
+    "nativeMessaging",
+    "storage"
   ]
 }
