--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -19,3 +19,8 @@ winreg = "0.10.1"
 winapi = "0.3.9"
 user32-sys = "0.2.0"
 exitcode = "1.1.2"
+
+[dev-dependencies]
+tempdir = "0.3.7"
+quickcheck = "1"
+quickcheck_macros = "1"
